@@ -3,12 +3,13 @@ package com.softwareag.controlplane.agent.azure.common.handlers.assets;
 import com.azure.core.http.rest.PagedIterable;
 import com.azure.resourcemanager.apimanagement.models.ApiContract;
 import com.azure.resourcemanager.apimanagement.models.TagContract;
-import com.fasterxml.jackson.databind.JsonNode;
-import com.fasterxml.jackson.databind.ObjectMapper;
 import com.softwareag.controlplane.agent.azure.common.constants.Constants;
 import com.softwareag.controlplane.agent.azure.common.context.AzureManagersHolder;
 import com.softwareag.controlplane.agent.azure.common.utils.AzureAgentUtil;
+import com.softwareag.controlplane.agentsdk.api.client.ControlPlaneClient;
 import com.softwareag.controlplane.agentsdk.api.client.SdkClientException;
+import com.softwareag.controlplane.agentsdk.core.assetsync.dispatcher.AssetSyncDispatcherImpl;
+import com.softwareag.controlplane.agentsdk.core.assetsync.dispatcher.AssetSyncDispatcherProvider;
 import com.softwareag.controlplane.agentsdk.core.cache.CacheManager;
 import com.softwareag.controlplane.agentsdk.core.log.DefaultAgentLogger;
 import com.softwareag.controlplane.agentsdk.model.API;
@@ -19,8 +20,10 @@ import com.softwareag.controlplane.agentsdk.model.AssetType;
 import com.softwareag.controlplane.agentsdk.model.Status;
 import org.apache.commons.lang3.ObjectUtils;
 
-import java.io.IOException;
-import java.util.*;
+import java.util.ArrayList;
+import java.util.List;
+import java.util.Map;
+import java.util.Set;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
@@ -62,58 +65,52 @@ public class AssetManager {
 
 
     /**
+     * Retrieve api list paged iterable.
+     *
+     * @return the paged iterable
+     */
+    public PagedIterable<ApiContract> retrieveAPIList() {
+        return azureManagersHolder.getAzureApiManager().apis().listByService(this.resourceGroup,
+                this.apiManagementServiceName);
+    }
+
+    /**
      * Retrieves all API from Azure using Azure SDK listByService method
      * And Azure APIContract is converted to Control plane SDK API Object.
      * List of APIs is returned to Control Plane. All these API are put in-memory caching.
      *
-     * @param toUpdateCache  the to update cache
-     * @param subscriptionId the subscription id
-     * @param userName       the user name
+     * @param toUpdateCache          the to update cache
+     * @param subscriptionId         the subscription id
+     * @param userName               the user name
+     * @param toCalculatePolicyCount the to calculate policy count
      * @return the list
      */
-    public List<API> retrieveAPIs(boolean toUpdateCache, String subscriptionId, String userName) {
-        PagedIterable<ApiContract> apis =
-                azureManagersHolder.getAzureApiManager().apis().listByService(this.resourceGroup,
-                        this.apiManagementServiceName);
-
-        return convertAsAPIModel(apis, toUpdateCache, subscriptionId, userName);
+    public List<API> retrieveAPIs(boolean toUpdateCache, String subscriptionId, String userName, boolean toCalculatePolicyCount) {
+        return convertAsAPIModel(retrieveAPIList(), toUpdateCache, subscriptionId, userName, toCalculatePolicyCount);
     }
 
-    private List<API> convertAsAPIModel(PagedIterable<ApiContract> apis, boolean toUpdateCache, String subscriptionId, String userName) {
+    private List<API> convertAsAPIModel(PagedIterable<ApiContract> apis, boolean toUpdateCache, String subscriptionId, String userName, boolean toCalculatePolicyCount) {
         List<API> allAPIs = new ArrayList<>();
         if (ObjectUtils.isEmpty(apis)) return allAPIs;
-
-        //fetching the count of global and product policy count
-        int globalProductPolicyCount = policyRetriever.getGlobalProductPolicyCount();
+        int globalPolicyCount;
+        if(toCalculatePolicyCount) {
+            globalPolicyCount = policyRetriever.getGlobalProductPolicyCount();
+        } else {
+            globalPolicyCount = 0;
+        }
 
         apis.stream().forEach(azureAPI -> {
-            String azureAPIId = AzureAgentUtil.constructAPIId(azureAPI.name(),
-                    subscriptionId, this.apiManagementServiceName);
-            // Azure apiType has values such as SOAP, GRAPHQL , for REST values left to be empty
-            String azureAPIType = azureAPI.apiType() == null ? "REST" : azureAPI.apiType().toString().toUpperCase();
-            if (validAPICreation(azureAPI, azureAPIType)) {
-                int policyCount = policyRetriever.getPoliciesCount(azureAPI.name()) + globalProductPolicyCount;
-                String versionSetId = azureAPI.apiVersionSetId() != null ?
-                        azureAPI.apiVersionSetId() : null;
-                API api = (API) new API.Builder(azureAPIId, API.Type.valueOf(azureAPIType))
-                        .version(azureAPI.apiVersion() != null ? azureAPI.apiVersion() : Constants.ORIGINAL_VERSION)
-                        .versionSetId(versionSetId)
-                        .runtimeAPIId(azureAPI.id())
-                        .policiesCount(policyCount)
-                        .status(Status.ACTIVE)
-                        .owner(AzureAgentUtil.getOwnerInfo(userName))
-                        .tags(getAPITags(azureAPI.name()))
-                        .description(azureAPI.description())
-                        .name(azureAPI.displayName())
-                        .build();
+            API api = convertToAPI(azureAPI, subscriptionId, userName, toCalculatePolicyCount ? globalPolicyCount + policyRetriever.getPoliciesCount(azureAPI.name()) : 0 );
+            if(ObjectUtils.isNotEmpty(api)) {
                 allAPIs.add(api);
-
-                if (toUpdateCache) CacheManager.getInstance().put(AssetType.API, azureAPIId, api);
+                if (toUpdateCache){
+                    CacheManager.getInstance().put(AssetType.API, api.getId(), api);
+                }
             }
         });
-
         return allAPIs;
     }
+
 
     /**
      * Convert from Azure API contract to Control Plane SDK API object.
@@ -121,16 +118,16 @@ public class AssetManager {
      * @param azureAPI       the azure api
      * @param subscriptionId the subscription id
      * @param userName       the user name
+     * @param policyCount    the policy count
      * @return the api
      */
-    public API convertToAPI(ApiContract azureAPI, String subscriptionId, String userName) {
+    public API convertToAPI(ApiContract azureAPI, String subscriptionId, String userName, int policyCount) {
         String azureAPIId = AzureAgentUtil.constructAPIId(azureAPI.name(),
                 subscriptionId, this.apiManagementServiceName);
+
         // Azure apiType has values such as SOAP, GRAPHQL , for REST values left to be empty
         String azureAPIType = azureAPI.apiType() == null ? "REST" : azureAPI.apiType().toString().toUpperCase();
         if (validAPICreation(azureAPI, azureAPIType)) {
-            int globalProductPolicyCount = policyRetriever.getGlobalProductPolicyCount();
-            int policyCount = policyRetriever.getPoliciesCount(azureAPI.name()) + globalProductPolicyCount;
             String versionSetId = azureAPI.apiVersionSetId() != null ?
                     azureAPI.apiVersionSetId() : null;
             return (API) new API.Builder(azureAPIId, API.Type.valueOf(azureAPIType))
@@ -160,10 +157,17 @@ public class AssetManager {
                 .map(TagContract::displayName).collect(Collectors.toSet());
     }
 
-    private boolean validAPICreation(ApiContract azureAPI, String azureAPIType) {
+    /**
+     * Valid api creation boolean.
+     *
+     * @param azureAPI     the azure api
+     * @param azureAPIType the azure api type
+     * @return the boolean
+     */
+    public boolean validAPICreation(ApiContract azureAPI, String azureAPIType) {
         List<String> enumNames = Stream.of(API.Type.values())
                 .map(Enum::name)
-                .collect(Collectors.toList());
+                .toList();
         // Control-plane doesn't support revision concept. So only current revision apis from Azure are published.
         return ObjectUtils.isNotEmpty(azureAPI.isCurrent()) && azureAPI.isCurrent()
                 && enumNames.contains(azureAPIType);
@@ -182,7 +186,7 @@ public class AssetManager {
     public List<AssetSyncAction<Asset>> getAPIUpdates(long fromTimestamp, String subscriptionId, String userName) {
         List<AssetSyncAction<Asset>> assetSyncActions = new ArrayList<>();
         // API loaded from Control Plane into cache, in case of agent re-start/down time handling
-        List<API> allAPIs = retrieveAPIs(false, subscriptionId, userName);
+        List<API> allAPIs = retrieveAPIs(false, subscriptionId, userName, true);
         populateAPICache();
         for (API api : allAPIs) {
             API cachedAPI = (API) CacheManager.getInstance().get(AssetType.API, api.getId());
@@ -233,8 +237,8 @@ public class AssetManager {
     }
 
     /**
-     *  Retrieves specific API with Id from Azure using Azure SDK getById method
-     *  And Azure APIContract is converted to Control plane SDK API Object
+     * Retrieves specific API with Id from Azure using Azure SDK getById method
+     * And Azure APIContract is converted to Control plane SDK API Object
      *
      * @param azureApiId     the azure api id
      * @param subscriptionId the subscription id
@@ -244,9 +248,46 @@ public class AssetManager {
     public API retrieveAPIwithId(String azureApiId, String subscriptionId, String userName) {
         ApiContract azureApi = AzureManagersHolder.getInstance().getAzureApiManager().apis().getById(azureApiId);
         if (ObjectUtils.isNotEmpty(azureApi)) {
-            return convertToAPI(azureApi, subscriptionId, userName);
+            return convertToAPI(azureApi, subscriptionId, userName, policyRetriever.getGlobalProductPolicyCount() + policyRetriever.getPoliciesCount(azureApiId));
         }
         return null;
     }
+
+    /**
+     * Api policy count dispatch.
+     *
+     * @param subscriptionId     the subscription id
+     * @param userName           the user name
+     * @param controlPlaneClient the control plane client
+     */
+    public void apiPolicyCountDispatch(String subscriptionId, String userName, ControlPlaneClient controlPlaneClient) {
+        try {
+            Thread.sleep(Constants.SYNC_POLICY_COUNT_DELAY);
+        } catch (InterruptedException e) {
+            logger.error("Error occurred when putting thread to sleep for policy count updater " + e.getMessage());
+        }
+
+        AssetSyncDispatcherImpl assetSyncDispatcher = AssetSyncDispatcherProvider.createAssetSyncDispatcher(controlPlaneClient, logger);
+
+        PagedIterable<ApiContract> apis = retrieveAPIList();
+        int globalProductPolicyCount = policyRetriever.getGlobalProductPolicyCount();
+
+        apis.stream().forEach(azureAPI -> {
+            String azureAPIId = AzureAgentUtil.constructAPIId(azureAPI.name(),
+                    subscriptionId, this.apiManagementServiceName);
+
+                API api = convertToAPI(azureAPI,subscriptionId,userName, globalProductPolicyCount + policyRetriever.getPoliciesCount(azureAPIId));
+                CacheManager.getInstance().put(AssetType.API, azureAPIId, api);
+
+                AssetSyncAction<API> apiSyncAction = new APISyncAction(AssetType.API, AssetSyncAction.SyncType.UPDATE, api,
+                        System.currentTimeMillis());
+                try {
+                    assetSyncDispatcher.dispatch(apiSyncAction);
+                } catch (SdkClientException e) {
+                    logger.error("the api sync update has some error " + e.getMessage());
+                }
+        });
+    }
+
 
 }
